--- a/archive.html
+++ b/archive.html
@@ -5,6 +5,19 @@ header : Post Archive
 group: navigation
 ---
 {% include JB/setup %}
-
+<div class="ui secondary pointing menu">
+	<a class="item" href="/">
+		Home
+	</a>
+	<a class="active item" href="/archive.html">
+		Archive
+	</a>
+	<a class="item" href="/tags.html">
+		Tags
+	</a>
+	<a class="ui item" href="/about.html">
+		About
+	</a>
+</div>
 {% assign posts_collate = site.posts %}
 {% include JB/posts_collate %}
