--- a/wwdc.html
+++ b/wwdc.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Archive
-header : Post Archive
+title: 苹果全球开发者大会(Worldwide Developers Conference)历届内容汇总
+header: Posts By Tag
 group: navigation
 ---
 {% include JB/setup %}
@@ -9,15 +9,16 @@ group: navigation
 	<a class="item" href="/">
 		Home
 	</a>
-	<a class="active item" href="/archive.html">
+	<a class="item" href="/archive.html">
 		Archive
 	</a>
 	<a class="item" href="/tags.html">
 		Tags
 	</a>
-	<a class="item" href="/tags.html">
+	<a class="active item" href="/tags.html">
 		WWDC
 	</a>
 </div>
-{% assign posts_collate = site.posts %}
-{% include JB/posts_collate %}
+
+###2015.6
+
