--- a/archive.html
+++ b/archive.html
@@ -15,7 +15,7 @@ group: navigation
 	<a class="item" href="/tags.html">
 		Tags
 	</a>
-	<a class="item" href="/tags.html">
+	<a class="item" href="/wwdc.html">
 		WWDC
 	</a>
 </div>
