--- a/tags.html
+++ b/tags.html
@@ -15,6 +15,9 @@ group: navigation
 	<a class="active item" href="/tags.html">
 		Tags
 	</a>
+	<a class="item" href="/about.html">
+		About
+	</a>
 </div>
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
