--- a/archive.html
+++ b/archive.html
@@ -15,6 +15,9 @@ group: navigation
 	<a class="item" href="/tags.html">
 		Tags
 	</a>
+    <a class="item" href="/about.html">
+        About
+    </a>
 
 </div>
 {% assign posts_collate = site.posts %}
