--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: 殷东亮的博客
 	<div class="ui">
 		<h2></h2>
 		<ul class="posts ui list">
-			{% for post in site.posts %}
+			{% for post in paginator.posts %}
 			<li class="">
 				<h3 class=""><a href="{{ BASE_PATH }}{{ post.url }}" style="color: #468DF0;">{{ post.title }}</a></h3>
 				<div>
@@ -50,7 +50,7 @@ title: 殷东亮的博客
 		<span class='pages'>第 {{ paginator.page }} 页，共 {{ paginator.total_pages }} 页</span>
 
 		{% if paginator.previous_page %}
-		<a class="previouspostslink" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" > « </a>
+		<a class="previouspostslink" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" > Previous </a>
 		{% endif %}
 
 		{% if paginator.page == 1 %}
@@ -68,7 +68,7 @@ title: 殷东亮的博客
 		{% endfor %}
 
 		{% if paginator.next_page %}
-		<a class="nextpostslink" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" > » </a>
+		<a class="nextpostslink" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" > Next </a>
 		{% endif %}
 	</div>
 </div>
