--- a/index.html
+++ b/index.html
@@ -46,29 +46,28 @@ title: 殷东亮的博客
 
 
 <div class="ui">
-	<div class="wp-pagenavi">
-		<span class='pages'>第 {{ paginator.page }} 页，共 {{ paginator.total_pages }} 页</span>
+	<div style="text-align: center;" class="site-footer-credits">
+		<span class="">第 {{ paginator.page }} 页，共 {{ paginator.total_pages }} 页</span>
 
 		{% if paginator.previous_page %}
-		<a class="previouspostslink" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" > Previous </a>
+		<a class="" rel="prev" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" > « Previous </a>
 		{% endif %}
 
 		{% if paginator.page == 1 %}
-		<span class="current">1</span>
+		<span class="">1</span>
 		{% else %}
-		<a class="page larger" href="/">1</a>
+		<a class="" href="/">1</a>
 		{% endif %}
-
 		{% for count in (2..paginator.total_pages) %}
 		{% if count == paginator.page %}
-		<span class="current">{{ count }}</span>
+		<span>{{ count }}</span>
 		{% else %}
-		<a class="page larger" href="{{ site.baseurl }}/blog/page{{ count }}">{{ count }}</a>
+		<a class="" href="{{ site.baseurl }}/blog/page{{ count }}">{{ count }}</a>
 		{% endif %}
 		{% endfor %}
 
 		{% if paginator.next_page %}
-		<a class="nextpostslink" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" > Next </a>
+		<a class="" rel="next" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" > Next » </a>
 		{% endif %}
 	</div>
 </div>
