--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ title: 关于我
     <br>
     <div>
         <p>
-            最近希望能有一些交流，尝试在<a href="http://www.jianshu.com/users/4ff4d2e2b16c">简书</a>还有<a href="http://segmentfault.com/blog/tcitry">SegmentFault</a>上面发一些内容，等思路都捋顺了，最后发到博客上。            
+            最近尝试在<a href="http://www.jianshu.com/users/4ff4d2e2b16c">简书</a>还有<a href="http://segmentfault.com/blog/tcitry">SegmentFault</a>上面发一些内容，等思路都捋顺了，最后发到博客上。            
         </p>
         <p>
             这是<a href="/resume.html", target="">我的简历</a>，欢迎<a href="mailto:tcitry@gmail.com" target="_blank">邮件</a>交流。
