--- a/resume.html
+++ b/resume.html
@@ -301,18 +301,6 @@
 					</div>
 				</li>
 			</ul>
-			<li class="action">
-				<div class="actioninfo">
-					<h4>Java开发</h4>
-				</div>
-			</li>
-			<ul class="actionlist">
-				<li class="action">
-					<div class="actioninfo">
-						<h4>标准库</h4>
-					</div>
-				</li>
-			</ul>
 		</ul>
 		<h2>实习经历</h2>
 		<ul class="actionlist">
@@ -372,7 +360,7 @@
 			</ul>
 			<li class="action">
 				<div class="actioninfo">
-					<h4>计算机联盟-社团（原名校CSDN高校俱乐部）</h4>
+					<h4>校计算机联盟-社团（原名:校CSDN高校俱乐部）</h4>
 				</div>
 			</li>
 			<ul class="actionlist">
@@ -409,10 +397,15 @@
 		<ul class="actionlist">
 			<li class="action">
 				<div class="actioninfo">
-					<h4>基于Django校园社区 https://github.com/tcitry/dlpuren</h4>
+					<h4>基于Django校园社区</h4>
 				</div>
 			</li>
 			<ul class="actionlist">
+				<li class="action">
+					<div class="actioninfo">
+						<h4>https://github.com/tcitry/dlpuren</h4>
+					</div>
+				</li>
 				<li class="action">
 					<div class="actioninfo">
 						<h4>校园社区，包括新闻、论坛、博客，使用七牛云资源上传下载</h4>
@@ -433,10 +426,15 @@
 			</ul>
 			<li class="action">
 				<div class="actioninfo">
-					<h4>个人技术博客 <a href="http://yindongliang.com" target="_blank">http://yindongliang.com</a></h4>
+					<h4>个人技术博客</h4>
 				</div>
 			</li>
 			<ul class="actionlist">
+				<li class="action">
+					<div class="actioninfo">
+						<h4><a href="http://yindongliang.com" target="_blank">http://yindongliang.com</a></h4>
+					</div>
+				</li>
 				<li class="action">
 					<div class="actioninfo">
 						<h4>经过多个技术选型迭代：Wordpress，Jekyll，Hexo，Ghost</h4>
