--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ title: 殷东亮的博客
 					<span class="site-footer-credits">{{ post.date | date_to_string }}</span>
 				</div>
 				<div></div>
-				<div style="color: #000;">
+				<div style="color: #333;">
 					<p>
 						{{ post.content | split:'<!--break-->' | first }}
 					</p>
 					<p>···</p>
 					<p>
 						{% if post.content contains '<!--break-->' %}
-						<a href="{{ post.url }}" style="color: #468DF0;">Read More</a><hr>
+						<a href="{{ post.url }}" style="color: #468DF0;">Read More →</a><hr>
 						{% endif %}
 					</p>
 				</div>
