cancer text align center

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: 殷东亮的个人主页
     <img src="/image/wechat.png" height="200">
     <br>
 </div>
-<div style="text-align: center;">
+<div>
     <a href="https://github.com/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -263px -5px no-repeat;" class="sns"></a>
     <a href="http://segmentfault.com/u/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -520px -5px no-repeat;" class="sns"></a>
     <a href="http://www.zhihu.com/people/tcitry" target="_blank" style="background: url('/image/sns_bg.png') -314px -5px no-repeat;" class="sns"></a>
