--- a/about.html
+++ b/about.html
@@ -13,8 +13,10 @@ title: 关于作者
         <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png" class="sns-img"></a>
         <a href="https://twitter.com/tcitry/" target="_blank"><img src="/image/twitter.png" class="sns-img"></a>
     </div>
-    <p>
-        这是<a href="/resume.html", target="">我的简历</a>，欢迎<a href="mailto:tcitry@gmail.com" target="_blank">邮件</a>交流。
-    </p>
-
 </div>
+<p>
+    应届毕业生，爱好编程，曾经大二有过半年Android开发，大三半年Python Web，半年iOS，现在实习做Python后端，志在全栈开发，对编译器有浓厚兴趣。现居大连，狂热乒乓球分子(柳橙)，暴雪游戏粉。
+</p>
+<p>
+    这是<a href="/resume.html", target="">我的简历</a>，欢迎<a href="mailto:tcitry@gmail.com" target="_blank">邮件</a>交流。
+</p>
