--- a/about.html
+++ b/about.html
@@ -9,9 +9,10 @@ title: 关于作者
 
 
     <div style="text-align: center;">
-        <a href="https://github.com/tcitry/" target="_blank"><img src="/image/github.png" class="sns-img"></a>
-        <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png" class="sns-img"></a>
-        <a href="https://twitter.com/tcitry/" target="_blank"><img src="/image/twitter.png" class="sns-img"></a>
+        <a href="https://github.com/tcitry/" target="_blank"><img src="/image/github.png"></a>
+        <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png"></a>
+        <a href="http://weibo.com/tcitry/" target="_blank"><img src="/image/weibo.png"></a>
+        <a href="https://twitter.com/tcitry/" target="_blank"><img src="/image/twitter.png"></a>
     </div>
 </div>
 <p>
