--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: 关于作者
     </div>
 </div>
 <p>
-    应届毕业生，爱好编程，曾经大二有过半年Android开发，大三半年Python Web，半年iOS，现在实习做Python后端，志在全栈开发，对编译器有浓厚兴趣。现居大连，狂热乒乓球分子(柳橙)，暴雪游戏粉。
+    应届毕业生，爱好编程，曾经大二有过半年Android开发，大三半年Python Web，半年iOS，现在实习做Python后端，志在全栈开发，对编译器有浓厚兴趣。
 </p>
 <p>
     这是<a href="/resume.html", target="">我的简历</a>，欢迎<a href="mailto:tcitry@gmail.com" target="_blank">邮件</a>交流。
