--- a/resume.html
+++ b/resume.html
@@ -244,6 +244,11 @@
 						<h4>Python标准库使用</h4>
 					</div>
 				</li>
+				<li class="action">
+					<div class="actioninfo">
+						<h4>其他技术栈: Celery, Mongodb, Redis等</h4>
+					</div>
+				</li>
 			</ul>
 			<li class="action">
 				<div class="actioninfo">
