--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: 关于作者
 ---
 
 <div style="text-align: center">
-    <img src="/image/wechat.png" height="200">
+    <img src="/image/wechat.png" height="200" alt="赞助作者~">
     <div style="text-align: center;" class="sns-img">
         <a href="https://github.com/tcitry/" target="_blank"><img src="/image/github.png"></a>
         <a href="http://weibo.com/tcitry" target="_blank"><img src="/image/weibo.png"></a>
