update my resume

--- a/resume.html
+++ b/resume.html
@@ -231,7 +231,7 @@
 			<ul class="actionlist">
 				<li class="action">
 					<div class="actioninfo">
-						<h4>Django, Django-rest-framework等</h4>
+						<h4>熟悉Django, Django-rest-framework等</h4>
 					</div>
 				</li>
 				<li class="action">
@@ -246,7 +246,12 @@
 				</li>
 				<li class="action">
 					<div class="actioninfo">
-						<h4>其他技术栈: Celery, Mongodb, Redis等</h4>
+						<h4>其他技术栈: Celery、Mongodb、Redis、Nginx等</h4>
+					</div>
+				</li>
+				<li class="action">
+					<div class="actioninfo">
+						<h4>Flask, Tornado入门</h4>
 					</div>
 				</li>
 			</ul>
@@ -302,7 +307,7 @@
 			<ul class="actionlist">
 				<li class="action">
 					<div class="actioninfo">
-						<h4>Git, Zsh, Tmux, Shadowsocks, Vim, Sublime Text 3, Pycharm, Markdown</h4>
+						<h4>Git, Zsh, Tmux, Shadowsocks, Vim, Sublime Text 3, Pycharm, Markdown, Postman</h4>
 					</div>
 				</li>
 			</ul>
@@ -317,7 +322,7 @@
 			<ul class="actionlist">
 				<li class="action">
 					<div class="actioninfo">
-						<h4>2015.10—至今</h4>
+						<h4>2015.10—2016.2</h4>
 					</div>
 				</li>
 				<li class="action">
