--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@ title: 关于作者
         <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png"></a>
         <a href="https://twitter.com/tcitry/" target="_blank"><img src="/image/twitter.png"></a>
         <a href="https://segmentfault.com/u/tcitry" target="_blank"><img src="/image/sf.png"></a>
+        <!-- <a href="http://www.jianshu.com/users/4ff4d2e2b16c" target="_blank"><img src="/image/jianshu.png"></a> -->
     </div>
 </div>
 <p>
