--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@ title: 关于作者
         <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png"></a>
         <a href="https://twitter.com/tcitry/" target="_blank"><img src="/image/twitter.png"></a>
         <a href="https://segmentfault.com/u/tcitry" target="_blank"><img src="/image/sf.png"></a>
-        <!-- <a href="http://www.jianshu.com/users/4ff4d2e2b16c" target="_blank"><img src="/image/jianshu.png"></a> -->
+        <a href="http://www.jianshu.com/users/4ff4d2e2b16c" target="_blank"><img src="/image/jianshu.png"></a>
     </div>
 </div>
 <p>
-    应届毕业生，热爱编程，喜欢Python和iOS开发，对编译器有浓厚兴趣。
+    应届毕业生，热爱编程，喜欢Python，对编译器有浓厚兴趣。
 </p>
 <p>
     这是<a href="/resume.html", target="">我的简历</a>，欢迎<a href="mailto:tcitry@gmail.com" target="_blank">邮件</a>交流。
