--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,12 +11,4 @@
 <p>2013.3–2015.12/校智能信息系统研究室/研究室成员</p>
 <p>2012.9进入大学</p>
 <p><img src="/image/me.jpg" alt=""></p>
-</div></article></div></section><footer><div class="paginator"></div><div id="disqus_thread"></div><script>var disqus_shortname = 'yindongliang';
-var disqus_identifier = 'about/index.html';
-var disqus_title = 'About';
-var disqus_url = 'http://yindongliang.com/about/index.html';
-(function() {
-    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-})();</script><script id="dsq-count-scr" src="//yindongliang.disqus.com/count.js" async></script><div class="copyright"><p>© 2012 - 2016 <a href="http://yindongliang.com">tcitry</a></p></div></footer></div><script>(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;e=o.createElement(i);r=o.getElementsByTagName(i)[0];e.src='//www.google-analytics.com/analytics.js';r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));ga('create',"UA-50554094-4",'auto');ga('send','pageview');</script></body></html>
+</div></article></div></section><footer><div class="paginator"></div><div class="copyright"><p>© 2012 - 2016 <a href="http://yindongliang.com">tcitry</a></p></div></footer></div><script>(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;e=o.createElement(i);r=o.getElementsByTagName(i)[0];e.src='//www.google-analytics.com/analytics.js';r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));ga('create',"UA-50554094-4",'auto');ga('send','pageview');</script></body></html>
