--- a/about.html
+++ b/about.html
@@ -7,14 +7,25 @@ title: 关于作者
     <img src="/image/wechat.png" height="200" alt="赞助作者~">
     <div style="text-align: center;" class="sns-img">
         <a href="https://github.com/tcitry/" target="_blank"><img src="/image/github.png"></a>
-        <a href="http://www.jianshu.com/users/4ff4d2e2b16c/" target="_blank"><img src="/image/jianshu.png"></a>
+        <a href="https://twitter.com/tcitry/" target="_blank"><img src="/image/twitter.png"></a>
         <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png"></a>
-        <a href="https://coding.net/u/tcitry" target="_blank"><img src="/image/coding.png"></a>
+        <a href="http://weibo.com/tcitry/" target="_blank"><img src="/image/weibo.png"></a>
+        <a href="https://segmentfault.com/u/tcitry" target="_blank"><img src="/image/sf.png"></a>
+        <a href="mailto:tcitry@gmail.com" target="_blank"><img src="/image/gmail.png"></a>
     </div>
+    <p>
+        殷东亮/男/1993.12<br>
+        2012-2016 本科/大连工业大学/计算机科学与技术<br>
+        邮箱：tcitry#gmail.com<br>
+        擅长：Python技术栈、Django框架<br>
+        ### 成长经历<br>
+        2016.5至今/北京优集品/Python工程师<br>
+        2016.6大学毕业<br>
+        2015.10—2016.2/大连云匠科技有限公司/Python后端实习生<br>
+        2014.5–2014.10/校创业实践中心/iOS客户端开发<br>
+        2013.5—2014.9/校计算机联盟/社团创始人及第一届社长<br>
+        2013.3–2015.12/校智能信息系统研究室/研究室成员<br>
+        2012.9进入大学<br>
+    </p>
+    <img src="/image/me.jpg">
 </div>
-<p>
-    应届毕业生，热爱编程，喜欢Python，对编译器有浓厚兴趣。
-</p>
-<p>
-    这是<a href="/resume.html", target="">我的简历</a>，欢迎<a href="mailto:tcitry@gmail.com" target="_blank">邮件</a>交流。
-</p>
