--- a/about.html
+++ b/about.html
@@ -13,12 +13,13 @@ title: 关于作者
         <a href="https://segmentfault.com/u/tcitry" target="_blank"><img src="/image/sf.png"></a>
         <a href="mailto:tcitry@gmail.com" target="_blank"><img src="/image/gmail.png"></a>
     </div>
+</div>
+<div>
     <p>
         殷东亮/男/1993.12<br>
         2012-2016 本科/大连工业大学/计算机科学与技术<br>
-        邮箱：tcitry#gmail.com<br>
         擅长：Python技术栈、Django框架<br>
-        ### 成长经历<br>
+        <h3>成长经历</h3>
         2016.5至今/北京优集品/Python工程师<br>
         2016.6大学毕业<br>
         2015.10—2016.2/大连云匠科技有限公司/Python后端实习生<br>
@@ -27,5 +28,7 @@ title: 关于作者
         2013.3–2015.12/校智能信息系统研究室/研究室成员<br>
         2012.9进入大学<br>
     </p>
-    <img src="/image/me.jpg">
+</div>
+<div style="text-align: center">
+    <img src="/image/me.jpg" height="500">
 </div>
