--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@ title: 关于作者
     <img src="/image/wechat.png" height="200" alt="赞助作者~">
     <div style="text-align: center;" class="sns-img">
         <a href="https://github.com/tcitry/" target="_blank"><img src="/image/github.png"></a>
+        <a href="http://weibo.com/tcitry/" target="_blank"><img src="/image/weibo.png"></a>
         <a href="http://www.douban.com/people/yindongliang/" target="_blank"><img src="/image/douban.png"></a>
         <a href="mailto:tcitry@gmail.com" target="_blank"><img src="/image/gmail.png"></a>
     </div>
