change atom url&email address

--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@ title: 关于作者
 <div style="text-align: center">
     <div style="text-align: center;" class="sns-img">
         <a href="https://github.com/dlpu/" target="_blank"><img src="/image/github.png"></a>
-        <a href="mailto:tcitry@gmail.com" target="_blank"><img src="/image/gmail.png"></a>
+        <a href="mailto:github@dlpu.party" target="_blank"><img src="/image/gmail.png"></a>
     </div>
 </div>
